gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-doc_masked.rs
#[doc(masked)] // { dg-error ".E0658." "" { target *-*-* } }
extern crate std as realstd;

fn main() {}

